@@ -1,0 +1,75 @@
+$start of simulation 
+at time   0.000, observed in0 0
+at time   0.000, observed in1 0
+at time   0.020, observed out = 0
+Warning: node _out is floating without pending feedback. 
+	[caused by in0 : 1]
+at time   1.000, observed in0 1
+at time   1.500, observed in1 1
+at time   1.520, observed out = 1
+Warning: node _out is floating without pending feedback. 
+	[caused by in0 : 0]
+at time   2.000, observed in0 0
+at time   2.500, observed in1 0
+at time   2.520, observed out = 0
+Warning: node _out is floating without pending feedback. 
+	[caused by in0 : 1]
+at time   3.000, observed in0 1
+at time   3.500, observed in1 1
+at time   3.520, observed out = 1
+Warning: node _out is floating without pending feedback. 
+	[caused by in0 : 0]
+at time   4.000, observed in0 0
+at time   4.500, observed in1 0
+at time   4.520, observed out = 0
+Warning: node _out is floating without pending feedback. 
+	[caused by in0 : 1]
+at time   5.000, observed in0 1
+at time   5.500, observed in1 1
+at time   5.520, observed out = 1
+Warning: node _out is floating without pending feedback. 
+	[caused by in0 : 0]
+at time   6.000, observed in0 0
+at time   6.500, observed in1 0
+at time   6.520, observed out = 0
+Warning: node _out is floating without pending feedback. 
+	[caused by in0 : 1]
+at time   7.000, observed in0 1
+at time   7.500, observed in1 1
+at time   7.520, observed out = 1
+Warning: node _out is floating without pending feedback. 
+	[caused by in0 : 0]
+at time   8.000, observed in0 0
+at time   8.500, observed in1 0
+at time   8.520, observed out = 0
+Warning: node _out is floating without pending feedback. 
+	[caused by in0 : 1]
+at time   9.000, observed in0 1
+at time   9.500, observed in1 1
+at time   9.520, observed out = 1
+Warning: node _out is floating without pending feedback. 
+	[caused by in0 : 0]
+at time  10.000, observed in0 0
+at time  10.500, observed in1 0
+at time  10.520, observed out = 0
+Warning: node _out is floating without pending feedback. 
+	[caused by in0 : 1]
+at time  11.000, observed in0 1
+at time  11.500, observed in1 1
+at time  11.520, observed out = 1
+Warning: node _out is floating without pending feedback. 
+	[caused by in0 : 0]
+at time  12.000, observed in0 0
+at time  12.500, observed in1 0
+at time  12.520, observed out = 0
+Warning: node _out is floating without pending feedback. 
+	[caused by in0 : 1]
+at time  13.000, observed in0 1
+at time  13.500, observed in1 1
+at time  13.520, observed out = 1
+Warning: node _out is floating without pending feedback. 
+	[caused by in0 : 0]
+at time  14.000, observed in0 0
+at time  14.500, observed in1 0
+at time  14.520, observed out = 0
+$finish at simulation time   15.0 ns
